--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                  <a href="https://maroon837579.studio.site/" target="_blank" rel="noopener noreferrer" class="hover:text-ppp-yellow transition-colors">運営会社 合同会社Arkadia</a>
                  <a href="https://docs.google.com/document/d/e/2PACX-1vTt-2emtJHtbJRY1TRYRKEIw_-9CQcHDChij7H9m1CQY-qMzovtcZoHO6lEyhqJaw7cly1MO0ziBYmw/pub" target="_blank" rel="noopener noreferrer" class="hover:text-ppp-yellow transition-colors">特定商取引法に基づく表記</a>
             </div>
-            <p class="mt-6">&copy; 2024 Players Pass Platform. All rights reserved.</p>
+            <p class="mt-6">&copy; 2024 Arkadia LLC. All rights reserved.</p>
         </div>
     </footer>
 
